--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
-  "rewrites": [
-    { "source": "/dados/(.*)", "destination": "/dados/index.js" }
-  ]
+  "version":2,
+  "builds":[
+    {
+      "src":"index.js",
+      "use":"@vercel/node"
+    }
+  ],
+  "routes":{
+    "src":"(.*)",
+    "dest":"dados/index.js"
+  }
 }
