--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
-  "version":2,
-  "builds":[
-    {
-      "src":"index.js",
-      "use":"@vercel/node"
-    }
-  ],
-  "routes":{
-    "src":"(.*)",
-    "dest":"dados/index.js"
-  }
+  "rewrites": [
+    { "source": "/dados/(.*)", "destination": "/dados/index.js" }
+  ]
 }
