--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
     { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/dados", "dest": "/index.js" }
+    { "src": "/dados", "dest": "/index.js" },
+    { "src": "/", "dest": "/index.js" }
   ]
 }
