--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/dados/(.*)", "destination": "index.js" }
+    { "source": "/dados/(.*)", "destination": "/index.js" }
   ]
 }
