--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-  "rewrites": [
-    { "source": "/dados/(.*)", "destination": "/index.js" }
+  "version":2,
+  "builds":[
+    {
+      "src":"./index.js",
+      "use":"@vercel/node"
+    }
+  ],
+  "routes":[
+    {
+      "src":"/(.*)",
+      "dest":"/"
+    }
   ]
 }
